--- a/src/app/topics/Topics.css
+++ b/src/app/topics/Topics.css
@@ -1,6 +1,7 @@
 .topics-wrapper {
+  padding: 0.5rem;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-  align-content: space-between;
+  align-content: space-around;
 }
