--- a/src/app/topics/topic/Topic.css
+++ b/src/app/topics/topic/Topic.css
@@ -1,16 +1,39 @@
-@media (min-width: 750px) {
-  .topic-wrapper {
-    padding: 2em;
-    max-width: 45vw;
-    width: 300px;
-    overflow-wrap: normal;
-  }
+.topic-wrapper {
+  margin: 2em;
+  position: relative;
+  display: inline-block;
+  width: 30rem;
+  overflow-wrap: normal;
+  border-radius: 1rem;
+  box-shadow: 0px 1px 2px #ccc;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-@media (max-width: 750px) {
-  .topic-wrapper {
-    padding: 2em;
-    width: 80vw;
-    overflow-wrap: normal;
-  }
+.topic-wrapper::after {
+  content: '';
+  border-radius: 1rem;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0px 11px 39px -11px #000;
+  opacity: 0;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.topic-wrapper:hover {
+  -webkit-transform: translate(0, -0.5rem);
+  transform: translate(0, -0.5rem);
+}
+
+.topic-wrapper:hover::after {
+  opacity: 1;
+}
+
+button:focus {
+  outline: 0;
 }
