--- a/src/app/topics/Topics.css
+++ b/src/app/topics/Topics.css
@@ -5,3 +5,10 @@
   justify-content: space-around;
   align-content: space-around;
 }
+
+.topics-viewer {
+  position: absolute;
+  top: 3.25rem;
+  min-height: calc(100vh - 3.25rem);
+  width: 100vw;
+}
