--- a/src/index.scss
+++ b/src/index.scss
@@ -33,7 +33,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.is-link {
+.act-like-link {
   background: none !important;
   color: inherit;
   border: none;
