--- a/src/auth/auth.scss
+++ b/src/auth/auth.scss
@@ -1,10 +1,11 @@
 .card-container {
   display: flex;
   flex-flow: row wrap;
-  align-content: center;
+  align-items: center;
   justify-content: center;
 }
 
 .form-card {
   width: 25rem;
+  max-height: 30rem;
 }
