--- a/src/app/topics/topic/Topic.scss
+++ b/src/app/topics/topic/Topic.scss
@@ -1,4 +1,6 @@
 .topic-wrapper {
+  z-index: 2;
+  all: initial;
   margin: 2em;
   position: relative;
   display: inline-block;
@@ -6,8 +8,8 @@
   overflow-wrap: normal;
   border-radius: 1rem;
   box-shadow: 0px 1px 2px #ccc;
-  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  -webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .topic-wrapper::after {
@@ -21,8 +23,8 @@
   height: 100%;
   box-shadow: 0px 11px 39px -11px #000;
   opacity: 0;
-  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  -webkit-transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .topic-wrapper:hover {
@@ -36,4 +38,20 @@
 
 button:focus {
   outline: 0;
+}
+
+.topic-image {
+  width: 100%;
+  height: 10rem;
+  border-radius: 1rem 1rem 0 0;
+  display: block;
+  overflow: hidden;
+}
+
+.topic-image img {
+  width: 100%;
+}
+
+.topic-content {
+  padding: 2rem;
 }
