--- a/src/assets/styles/BulmaOverwrites.scss
+++ b/src/assets/styles/BulmaOverwrites.scss
@@ -7,6 +7,9 @@ $new-primary: #7d4cdb;
 $new-primary-invert: findColorInvert($new-primary);
 $new-link: #81fced;
 $new-link-invert: findColorInvert($new-link);
+$new-info: #1f7cba;
+$new-info-invert: findColorInvert($new-info);
+
 // 3. Add new color variables to the color map.
 @import '~bulma/sass/utilities/derived-variables.sass';
 $family-secondary: (Poppins);
@@ -19,32 +22,11 @@ $addColors: (
   'link': (
     $new-link,
     $new-link-invert
+  ),
+  'info': (
+    $new-info,
+    $new-info-invert
   )
 );
 $colors: map-merge($colors, $addColors);
 @import '~bulma/bulma';
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.act-like-link {
-  background: none !important;
-  color: inherit;
-  border: none;
-  padding: 0 !important;
-  font: inherit;
-  cursor: pointer;
-}
-
-.full-height-bg {
-  position: absolute;
-  top: 3.25rem;
-  min-height: calc(100vh - 3.25rem);
-  width: 100vw;
-}
