--- a/src/assets/styles/BulmaOverwrites.scss
+++ b/src/assets/styles/BulmaOverwrites.scss
@@ -1,7 +1,6 @@
-// 1. Import the initial variables
 @import '~bulma/sass/utilities/initial-variables';
 @import '~bulma/sass/utilities/functions';
-// 2. Setup your Custom Colors
+
 $black: #000;
 $new-primary: #7d4cdb;
 $new-primary-invert: findColorInvert($new-primary);
@@ -10,9 +9,22 @@ $new-link-invert: findColorInvert($new-link);
 $new-info: #1f7cba;
 $new-info-invert: findColorInvert($new-info);
 
-// 3. Add new color variables to the color map.
 @import '~bulma/sass/utilities/derived-variables.sass';
+
 $family-secondary: (Poppins);
+$family-primary: (
+  -apple-system,
+  BlinkMacSystemFont,
+  'Segoe UI',
+  'Roboto',
+  'Oxygen',
+  'Ubuntu',
+  'Cantarell',
+  'Fira Sans',
+  'Droid Sans',
+  'Helvetica Neue',
+  sans-serif
+);
 
 $addColors: (
   'primary': (
@@ -29,4 +41,5 @@ $addColors: (
   )
 );
 $colors: map-merge($colors, $addColors);
+
 @import '~bulma/bulma';
