--- a/src/assets.example/styles/BulmaOverwrites.scss
+++ b/src/assets.example/styles/BulmaOverwrites.scss
@@ -2,7 +2,7 @@
 @import '~bulma/sass/utilities/functions';
 
 $black: #000;
-$new-primary: #7d4cdb;
+$new-primary: rgb(161, 161, 161);
 $new-primary-invert: findColorInvert($new-primary);
 $new-link: #81fced;
 $new-link-invert: findColorInvert($new-link);
