--- a/src/components/Labs/Editor/Editor.scss
+++ b/src/components/Labs/Editor/Editor.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/styles/Vars.scss';
+
 @media (min-width: 750px) {
   .ace-editor {
     top: 3.25rem;
@@ -5,21 +7,34 @@
     width: 50vw;
   }
 
-  .ace-editor-has-result {
+  /*.ace-editor-has-result {
     height: calc(100vh - 6.5rem - 3rem - 20vh);
-  }
+  }*/
 
   .result-window {
     position: absolute;
     overflow: scroll;
+    z-index: 10;
     bottom: 3rem;
-    height: 20vh;
+    height: 40vh;
     width: 50vw;
     padding: 0.5rem;
   }
 
+  .result-window > button {
+    cursor: pointer;
+    position: absolute;
+    z-index: 20;
+    top: 0.5rem;
+    right: 1rem;
+    height: 2rem;
+    width: 2rem;
+    border-radius: 1rem;
+  }
+
   .submit-button-wrapper {
     position: absolute;
+    z-index: 10;
     bottom: 0;
     width: 50vw;
     height: 3rem;
