Add auth state checker and fix topics page on mobile and add support for PWA

--- a/src/assets/styles/Global.scss
+++ b/src/assets/styles/Global.scss
@@ -5,6 +5,9 @@ body {
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
 }
 
 .act-like-link {
