--- a/src/components/Topics/Topics.scss
+++ b/src/components/Topics/Topics.scss
@@ -5,3 +5,11 @@
   justify-content: space-around;
   align-content: space-around;
 }
+
+.search {
+  padding: 0.5rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-content: space-around;
+}
