Add coming soon feature

--- a/src/assets/styles/Vars.scss
+++ b/src/assets/styles/Vars.scss
@@ -1,6 +1,7 @@
 $primary: #7d4cdb;
 $dark-primary: #570786b0;
 $light-primary: #c07efd;
+$danger: hsl(348, 100%, 61%);
 $link: #81fced;
 $info: #1f7cba;
 $grad1: linear-gradient($light-primary, $primary);
