--- a/src/components/Topics/Topics.scss
+++ b/src/components/Topics/Topics.scss
@@ -7,7 +7,7 @@
 }
 
 .search {
-  padding: 0.5rem;
+  padding-top: 2rem;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
